--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,8 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      <div class="post-btn "><button class="hover-effect" type="post-button" onclick="location.href='/post/{{post.id}}'">{{post.name}}</button></div>
+      <div class="post-btn "><button class="hover-effect" type="post-button"
+          onclick="location.href='/post/{{post.id}}'">{{post.name}}</button></div>
     </h2>
     <p>Created by {{post.userPost.name}} on {{format_date post.date_created}}</p>
   </div>
