--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,65 +1,59 @@
 <html lang='en'>
 
-  <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Off The Beaten Path!</title>
-    <link
-      rel='stylesheet'
-      href='https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css'
-      integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh'
-      crossorigin='anonymous'
-    />
-    <link rel='stylesheet' href='/css/style.css' />
-  </head>
+<head>
+  <meta charset='UTF-8' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <title>Off The Beaten Path!</title>
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css'
+    integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh' crossorigin='anonymous' />
+  <link rel='stylesheet' href='/css/style.css' />
+</head>
 
-  <div class='header-container'>
-    <header class='text-center'>
-      <div class='row'>
-        <div class='col'></div>
-        <div class='col'><button class='header hover-effect' onclick="location.href='/'">Off
-            The Beaten Path!</button></div>
-                <!-- Conditionally render login or logout links -->
-        <div class='col text-end'>{{#if logged_in}}
-            <div><button class='profile-btn hover-effect' onclick="location.href='/profile'">profile</div></button>
-            <button class='logout-button' id='logout'>logout</button>
-          {{else}}
-            <button class='login-button hover-effect'onclick="location.href='/login'">login</button>
-          {{/if}}</div>
+<div class='header-container'>
+  <header class='text-center'>
+    <div class='row'>
+      <div class='col'></div>
+      <div class='col'><button class='header hover-effect' onclick="location.href='/'">Off
+          The Beaten Path!</button></div>
+      <!-- Conditionally render login or logout links -->
+      <div class='col text-end'>{{#if logged_in}}
+        <div class="d-flex justify-content-around">
+          <button class='profile-btn hover-effect col' onclick="location.href='/profile'">profile</button>
+          <button class='logout-button col' id='logout'>logout</button>
+        </div>
+        {{else}}
+        <button class='login-button hover-effect' onclick="location.href='/login'">login</button>
+        {{/if}}
       </div>
-      <h1>
-        <p class='header-text'>Let us steer you in the right direction!</p>
-      </h1>
-    </header>
-  </div>
-
-  <body>
-    <div class='text-center mt-5'>
-      <h2>
-        <button
-          class='btn btn-primary makeRequest'
-          onclick="location.href='/profile'"
-        >Make A Request</button>
-        <button
-          class='btn btn-primary fillRequest'
-          onclick="location.href='/'"
-        >Fill A Request</button>
-      </h2>
     </div>
-    <main class='container container-fluid mt-5'>
-      <!-- Render the sub layout -->
-      {{{body}}}
-    </main>
-    <footer>
-      <div class='text-center'>
-        <p>Curious about the code? Check out our project at <a href='https://github.com/Conartisttt/Off-Road-Unstucker'>GitHub</a>!</p>
-      </div>
-    </footer>
+    <h1>
+      <p class='header-text'>Let us steer you in the right direction!</p>
+    </h1>
+  </header>
+</div>
 
-    <!-- Render script for logged in users only -->
-    {{#if logged_in}}
-      <script src='/js/logout.js'></script>
-    {{/if}}
-  </body>
+<body>
+  <div class='text-center mt-5'>
+    <h2>
+      <button class='btn btn-primary makeRequest' onclick="location.href='/profile'">Make A Request</button>
+      <button class='btn btn-primary fillRequest' onclick="location.href='/'">Fill A Request</button>
+    </h2>
+  </div>
+  <main class='container container-fluid mt-5'>
+    <!-- Render the sub layout -->
+    {{{body}}}
+  </main>
+  <footer>
+    <div class='text-center'>
+      <p>Curious about the code? Check out our project at <a
+          href='https://github.com/Conartisttt/Off-Road-Unstucker'>GitHub</a>!</p>
+    </div>
+  </footer>
+
+  <!-- Render script for logged in users only -->
+  {{#if logged_in}}
+  <script src='/js/logout.js'></script>
+  {{/if}}
+</body>
 
 </html>
