--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,36 +1,49 @@
 <div class="d-flex justify-content-center">
-<div class="text-center">
-  <div class="title">
-  <h2>{{name}}</h2>
-  </div>
-  <div class="description">
-  <p>{{description}}</p>
-  </div>
-  <div class="other-info">
-  <p>Preferred Contact Method: {{contact_method}}</p>
-  <div>
-    <p>Contact Details:</p>
-    <ul>
-      <li>Email: {{userPost.email}}</li>
-      <li>Phone: {{userPost.phone}}</li>
-    </ul>
-  </div>
-  <div>
-    <p>Vehicle Details:</p>
-    <ul>
-      <li>Make: {{vehicle_make}}</li>
-      <li>Model: {{vehicle_model}}</li>
-    </ul>
-  </div>
-  <p>Created by {{userPost.name}} on {{format_date date_created}}</p>
-  {{#if logged_in}}
-  <button id="acceptMissionBtn" class="btn btn-primary" >Accept this Mission</button>
+  <div class="text-center">
+    <div class="title">
+      <h2>{{name}}</h2>
+    </div>
+    <div class="description">
+      <p>{{description}}</p>
+    </div>
+    <div class="other-info">
+      <p>Preferred Contact Method: {{contact_method}}</p>
+      <div>
+        <p>Contact Details:</p>
+        <ul>
+          <li>Email: {{userPost.email}}</li>
+          <li>Phone: {{userPost.phone}}</li>
+        </ul>
+      </div>
+      <div>
+        <p>Vehicle Details:</p>
+        <ul>
+          <li>Make: {{vehicle_make}}</li>
+          <li>Model: {{vehicle_model}}</li>
+        </ul>
+      </div>
+      <div class="hide" id="mapDiv">
+        <p>Where I am Stuck:</p>
+        <div id="map"></div>
+      </div>
+      <p>Created by {{userPost.name}} on {{format_date date_created}}</p>
       <input id="post_id" type="hidden" value="{{id}}">
-  {{else}}
-      <button class="btn btn-primary hover-effect" onclick="location.href='/login'">Accept this Mission</button>
+      {{#if logged_in}}
+      <button id="acceptMissionBtn" class="btn btn-primary btn-border">Accept this Mission</button>
+      <button id="seeLocationBtn" class="btn btn-primary btn-border">See Location</button>
+      {{else}}
+      <button class="btn btn-primary btn-border hover-effect" onclick="location.href='/login'">Accept this Mission</button>
+      <button class="btn btn-primary btn-border" onclick="location.href='/login'">See Location</button>
+      {{/if}}
+    </div>
+  </div>
+</div>
 
-  {{/if}}
-</div>
-</div>
-</div>
-<script src="../js/post.js" defer></script>
+<script>
+  (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
+    key: "AIzaSyD4A3fnM_arE4xXpsffKEn-N2DgTHFfIWE",
+    v: "weekly",
+  });
+</script>
+
+<script src="../js/post.js"></script>
